--- a/src/app/modules/pages/bdm/my-survey/my-survey.component.html
+++ b/src/app/modules/pages/bdm/my-survey/my-survey.component.html
@@ -169,11 +169,11 @@
             <div class="form-group">
               <div class="col-sm-9">
                 <mat-form-field>
-                  <mat-select [(ngModel)]="AppoinmentDetail.SelectedState" placeholder="Select State">
+                  <mat-select [(ngModel)]="AppoinmentDetail.StateId" placeholder="Select State">
                     <mat-option value="undefined">
                       Select A State
                     </mat-option>
-                    <mat-option *ngFor="let state of StateMasterList" [value]="state">
+                    <mat-option *ngFor="let state of StateMasterList" [value]="state.Id">
                       {{state.Name}}
                     </mat-option>
                   </mat-select>
@@ -183,13 +183,15 @@
             <div class="form-group">
               <div class="col-sm-9">
                 <mat-form-field>
-                  <mat-select [(ngModel)]="AppoinmentDetail.SelectedCity" placeholder="Select City">
+                  <mat-select [(ngModel)]="AppoinmentDetail.CityId" placeholder="Select City">
                     <mat-option value="undefined">
                       Select A City
                     </mat-option>
-                    <mat-option *ngFor="let city of CityMasterList" [value]="city">
-                      {{city.Name}}
-                    </mat-option>
+                    <ng-container *ngFor="let city of CityMasterList">
+                      <mat-option *ngIf="city.State == AppoinmentDetail.StateId" [value]="city.Id">
+                        {{city.Name}}
+                      </mat-option>
+                    </ng-container>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -209,7 +211,7 @@
               Call History
             </span>
           </div>
-          <div class="modal-body" *ngIf="checkEditing" id="modal-body">
+          <div class="modal-body" id="modal-body">
             <form name="myForm" role="form" class="form-horizontal well well-sm">
               <fieldset>
                 <div class="row">
@@ -218,9 +220,10 @@
                       <label for="CallType" class="control-label col-sm-3">Call Type</label>
                       <div class="col-sm-9">
                         <mat-form-field>
-                          <mat-select placeholder="Select Month">
-                            <mat-option *ngFor="let month of month" [value]="month.value">
-                              {{month.viewValue}}
+                          <mat-select placeholder="Select A Status"
+                            [(ngModel)]="AppoinmentDetail.selectedCallHistoryStatus">
+                            <mat-option *ngFor="let stus of StateMasterList" [value]="stus.Id">
+                              {{stus.Name}}
                             </mat-option>
                           </mat-select>
                         </mat-form-field>
@@ -229,7 +232,8 @@
                     <div class="form-group">
                       <label for="date" class="control-label col-sm-3">Date</label>
                       <div class="col-sm-9">
-                        <input matInput [matDatepicker]="picker2" placeholder="To date">
+                        <input [(ngModel)]="AppoinmentDetail.callHistoryDate" matInput [matDatepicker]="picker2"
+                          placeholder="To date">
                         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                         <mat-datepicker #picker2></mat-datepicker>
                       </div>
@@ -238,7 +242,7 @@
                       <label for="remark" class="control-label col-sm-3">Remarks</label>
                       <div class="col-sm-9">
                         <mat-form-field class="example-full-width">
-                          <input matInput placeholder="Search by Employee">
+                          <input [(ngModel)]="AppoinmentDetail.callHistoryRemarks" matInput placeholder="Remarks">
                         </mat-form-field>
                       </div>
                     </div>
@@ -246,7 +250,7 @@
                 </div>
               </fieldset>
               <div class="modal-footer">
-                <button mat-raised-button color="primary">Save</button>&nbsp;
+                <button mat-raised-button color="primary" (click)="saveAppointMentReport()">Save</button>&nbsp;
               </div>
             </form>
             <div class="col-md-12">
@@ -261,7 +265,21 @@
                   </tr>
                 </thead>
                 <tbody>
-
+                  <tr *ngFor="let row of allReportsList;index as i;">
+                    <td class="text-center">{{ row.StatusName}}</td>
+                    <td>{{ row.Date | date : 'dd/MM/yyyy'}}</td>
+                    <td>{{ row.Remarks}}</td>
+                    <td>{{row.EmployeeName}}</td>
+                    <td>
+                      <div *ngIf="row.FileUrl ==''">
+                        <a target="_blank" href="{{'/ServeyImages/'+row.FileUrl}}"
+                          class="btn btn-sm btn-primary text-center">
+                          <i class="glyphicon glyphicon-download">
+                          </i>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
                 </tbody>
                 <tfoot>
                   <tr>
@@ -282,8 +300,9 @@
               <div class="form-group col-sm-3">
                 <label for="service">Service Type</label>
                 <mat-form-field>
-                  <mat-select [(ngModel)]="requirement.SelectedService" placeholder="Select service">
-                    <mat-option *ngFor="let service of ServiceMasterList" [value]="service">
+                  <mat-select [(ngModel)]="requirement.SelectedService" [ngModelOptions]="{standalone: true}"
+                    (selectionChange)="onSelectedServiceChange()" placeholder="Select service">
+                    <mat-option *ngFor="let service of ServiceMasterList" [value]="service.Id">
                       {{service.Name}}
                     </mat-option>
                   </mat-select>
@@ -292,8 +311,9 @@
               <div class="form-group col-sm-3">
                 <label for="designation">Designation</label>
                 <mat-form-field>
-                  <mat-select [(ngModel)]="requirement.SelectedDesignation" placeholder="Select Designation">
-                    <mat-option *ngFor="let designation of DesignationMasterList" [value]="designation">
+                  <mat-select [(ngModel)]="requirement.SelectedDesignation" [ngModelOptions]="{standalone: true}"
+                    placeholder="Select Designation">
+                    <mat-option *ngFor="let designation of DesignationMasterList" [value]="designation.Id">
                       {{designation.Name}}
                     </mat-option>
                   </mat-select>
@@ -304,7 +324,8 @@
                 <div class="input-group">
                   <!-- <span class="input-group-addon" id="basic-addon1"><i class="fa fa-rupee"></i></span> -->
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Rate per Employee" [(ngModel)]="requirement.RatePerEmployee">
+                    <input type="number" matInput placeholder="Rate per Employee"
+                      [(ngModel)]="requirement.RatePerEmployee" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </div>
               </div>
@@ -313,14 +334,15 @@
                 <div class="input-group">
                   <!-- <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user-plus"></i></span> -->
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Employee Count" [(ngModel)]="requirement.EmployeeCount">
+                    <input type="number" [ngModelOptions]="{standalone: true}" matInput placeholder="Employee Count"
+                      [(ngModel)]="requirement.EmployeeCount">
                   </mat-form-field>
                 </div>
               </div>
               <div class="col-lg-2 col-md-2" style="position:relative;">
                 <label><br /></label>
                 <div>
-                  <button mat-raised-button color="primary">Add</button>&nbsp;
+                  <button mat-raised-button (click)="onAddRequirmentDetails()" color="primary">Add</button>&nbsp;
                 </div>
               </div>
             </div>
@@ -339,6 +361,21 @@
               </tr>
             </thead>
             <tbody>
+              <tr *ngFor="let row of requirementDetailsList;index as i;">
+                <td class="text-center">{{ row.ServiceName }}</td>
+                <td class="text-center">{{ row.DesignationName }}</td>
+                <td class="text-center">{{ row.RatePerEmployee }}</td>
+                <td class="text-center">{{ row.EmployeeCount }}</td>
+                <td class="text-center">{{ row.Total }}</td>
+                <td class="text-center">
+                  <div>
+                    <button type="button" (click)="onRemoveRequirementDetail(i)" class="btn btn-sm btn-danger">
+                      <i class="glyphicon glyphicon-remove-circle">
+                      </i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
             </tbody>
             <tfoot>
               <tr>
@@ -350,18 +387,19 @@
         <form role="form" name="reqsForm" class="well well-sm">
           <fieldset>
             <h5>
-              <mat-checkbox [(ngModel)]="AppoinmentDetail.ExistCompetitors" value="true">Existing Competitor
+              <mat-checkbox #existingCustomer [(ngModel)]="AppoinmentDetail.ExistCompetitors" value="true">Existing
+                Competitor
               </mat-checkbox>
             </h5>
             <hr style="border-color:cadetblue" />
             <hr />
-            <div class="row" *ngIf="AppoinmentDetail.ExistCompetitors">
+            <div class="row" *ngIf="existingCustomer.checked">
               <div class="col-lg-6 col-md-6">
                 <div class="form-group">
                   <label for="Cname" class="control-label col-sm-3">Client Name</label>
                   <div class="col-sm-9">
                     <mat-form-field class="example-full-width">
-                      <input [(ngModel)]="existingRequirement.ClientName" matInput placeholder="Client Name">
+                      <input [(ngModel)]="existCompetitor.Name" matInput placeholder="Client Name">
                     </mat-form-field>
                   </div>
                 </div>
@@ -370,20 +408,20 @@
                 <div class="form-group col-sm-3">
                   <label for="service">Service Type</label>
                   <mat-form-field class="example-full-width">
-                    <input matInput [(ngModel)]="existingRequirement.ServiceType" placeholder="Service Type">
+                    <input matInput [(ngModel)]="existCompetitor.Service" placeholder="Service Type">
                   </mat-form-field>
                 </div>
                 <div class="form-group col-sm-3">
                   <label for="designation">Designation</label>
                   <mat-form-field class="example-full-width">
-                    <input [(ngModel)]="existingRequirement.Designation" matInput placeholder="Designation">
+                    <input [(ngModel)]="existCompetitor.Designation" matInput placeholder="Designation">
                   </mat-form-field>
                 </div>
                 <div class="form-group col-sm-2">
                   <label for="rate">Rate Per Employee</label>
                   <div class="input-group">
                     <mat-form-field class="example-full-width">
-                      <input [(ngModel)]="existingRequirement.RatePerEmployee" matInput placeholder="Rate Per Employee">
+                      <input [(ngModel)]="existCompetitor.RatePerEmployee" matInput placeholder="Rate Per Employee">
                     </mat-form-field>
                   </div>
                 </div>
@@ -391,21 +429,21 @@
                   <label for="count">Employee Count</label>
                   <div class="input-group">
                     <mat-form-field class="example-full-width">
-                      <input matInput placeholder="Search by Employee">
+                      <input [(ngModel)]="existCompetitor.EmployeeCount" matInput placeholder="Employee Count">
                     </mat-form-field>
                   </div>
                 </div>
                 <div class="col-lg-2 col-md-2" style="position:relative;">
                   <label><br /></label>
                   <div>
-                    <button mat-raised-button color="primary">Add</button>&nbsp;
+                    <button mat-raised-button (click)="onAddCompetitor() " color="primary">Add</button>&nbsp;
                   </div>
                 </div>
               </div>
             </div>
           </fieldset>
         </form>
-        <div class="col-md-12" *ngIf="AppoinmentDetail.ExistCompetitors">
+        <div class="col-md-12" *ngIf="existingCustomer.checked">
           <table class="table table-striped">
             <thead>
               <tr>
@@ -419,6 +457,22 @@
               </tr>
             </thead>
             <tbody>
+              <tr *ngFor="let row of existingCompetitorsList;index as i;">
+                <td class="text-center">{{ row.Name }}</td>
+                <td class="text-center">{{ row.Service }}</td>
+                <td class="text-center">{{ row.Designation }}</td>
+                <td class="text-center">{{ row.RatePerEmployee }}</td>
+                <td class="text-center">{{ row.EmployeeCount }}</td>
+                <td class="text-center">{{ row.Total }}</td>
+                <td class="text-center">
+                  <div>
+                    <button (click)="onRemoveCompetitor(i)" type="button" class="btn btn-sm btn-danger">
+                      <i class="glyphicon glyphicon-remove-circle">
+                      </i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
             </tbody>
             <tfoot>
               <tr>
